Fixed missing color scheme overrides for meta-content elements.

--- a/src/themes/pece_scholarly_lite/assets/overrides/scheme_overrides.default.css
+++ b/src/themes/pece_scholarly_lite/assets/overrides/scheme_overrides.default.css
@@ -11,8 +11,10 @@
 .view-mode-teaser .icon,
 .view-mode-most-recent .icon,
 .view-mode-mini-teaser .icon,
-.view-mode-meta-content .icon,
 .view-pece-structured-analytics i { background-color: #252525; }
+
+.view-mode-meta-content .icon,
+.view-mode-meta-content .icon::before { color: #252525; }
 
 .essay-link,
 .annotate-link,
@@ -25,6 +27,8 @@
 
 .dashboard-artifact-submenu .dashboard-artifact-toggle::before { color: #252525; }
 
+.view-display-id-pece_question_artifact_annotions .views-field-picture::before,
+.view-display-id-pece_user_artifact_annotations .views-field-picture::before,
 .view-id-pece_my_noted_artifacts li.views-row > div::before,
 .view-id-pece_my_analytics li.views-row > div::before,
 .view-pece-my-biblio-items li.views-row > div::before,
@@ -32,4 +36,4 @@
 .view-pece-my-fieldsites li.views-row > div::before,
 .view-id-pece_my_groups li.views-row > div::before { background-color: #252525; }
 
-.entity-pece-photo-essay-item h3 a { color: #252525 }
+.entity-pece-photo-essay-item h3 a, .view-mode-meta-content h5 a { color: #252525 }
